services/vault/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: vault.CHANGEME_DOMAIN
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-CHANGEME_DOMAIN_DASHED-tls
      allowedRoutes:
        namespaces:
          from: Same
